--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "prettier.trailingComma": "es5",
   "editor.formatOnSave": true,
   "editor.formatOnType": true,
-  "prettier.printWidth": 360
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "prettier.printWidth": 360,
 }
